welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var T = new Array [Color](getMondeHauteur()-1))
	for (i <- 0 to getMondeHauteur -1) {
        T(i) = getCouleurSol();
    }
}
